--- a/views/purchaseAndServices/show.ejs
+++ b/views/purchaseAndServices/show.ejs
@@ -355,5 +355,36 @@
             </div>
           </div>
 
+          
+  <script type="text/javascript">
+  $(":button").submit(function() {
+    $(document).ready(function() {
+      $('#loadingModal').modal('show');
+    })
+  });
+</script>
+
+
+<!-- Modal -->
+<div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Aviso</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Aguarde...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
           <%- include('../partials/footer.ejs') %>
