--- a/views/registrationsToken/index.ejs
+++ b/views/registrationsToken/index.ejs
@@ -4,8 +4,10 @@
   <div class="sobreposicaoFormToken">
     <h2>Gerar Token</h2>
   </div>
-
-  <form id="form" action="/generate_token" method="post" style="border: 1px solid #000; padding: 40px 15px 10px 50px;width: 50%; margin-left: auto; margin-right: auto;">
+  <hr>
+<div class="card" style="width: 30rem;">
+  <div class="card-body" style="width: 30rem;">
+  <form id="form" action="/generate_token" method="post">
     <div class="form-row">
       <div class="form-group col-md-4">
         <label for="inputState">Tipo usuário:</label>
@@ -19,13 +21,14 @@
           <option value="10">T.I</option>
         </select>
       </div>
+      <input type="email" name="email" class="form-control" placeholder="Informe o email:">
     </div>
-    <input type="email" name="email" class="form-control" placeholder="Informe o email:" required style="width: 60%;">
     <br>
     <button type="submit" class="btn btn-info">Gerar Token</button>
+  </div>
   </form>
+</div>
 
-  <hr style="width: 90%;">
 
   <% if(message) { %>
     <script>
